# cybershell-dotfiles

./: .gitignore  README.md
btop/.config/btop/: btop.conf
cava/.config/cava/: config  qs_config
fastfetch/.config/fastfetch/: config-06.jsonc  config-07.jsonc  config-10.jsonc  config-13.jsonc  config-hardware.jsonc  config.jsonc
fish/.config/fish/: config.fish  greeting.sh
hypr/.config/hypr/: application-style.conf  hypridle.conf  hyprland.conf  hyprland.lua  hyprlock.conf  hyprpaper.conf  hyprtoolkit.conf  monitors.conf  xdph.conf
hypr/.config/hypr/scheme/: current.conf
hypr/.config/hypr/scripts/: clipboard.sh  focus-horizontal.sh  focus-vertical.sh  gamemode.sh  hyprctl-lua-compat.sh  init-workspaces.sh  minimize.sh  move-to-workspace.sh  opacity.sh  recorder.sh  safe-focus-lib.sh  scratchpad.sh  switch-workspace.sh  wallpaper-themer.sh  wallpaper.sh  waybar-watch.sh  ws-switch.sh
hypr/.config/hypr/shaders/: cyberpunk.frag
kitty/.config/kitty/: kitty.conf
quickshell/.config/quickshell/: shell.qml  transitions.json  tray-pins.json
quickshell/.config/quickshell/common/: Anim.qml  Audio.qml  BarConfig.js  BarConfig.qml  CAnim.qml  Colors.js  Colours.qml  CornerAccents.qml  CutShape.qml  DrawerState.qml  GlitchAnim.qml  GlitchEffect.qml  HL.qml  Players.qml  PlaylistState.qml  TransitionConfig.qml  WallpaperConstants.js  WallpaperState.qml  WallustColors.qml
quickshell/.config/quickshell/common/effects/: ChromaticText.qml  PulseAnim.qml  ScanlineOverlay.qml
quickshell/.config/quickshell/common/io/: TimedProcess.qml
quickshell/.config/quickshell/common/widgets/: ModuleCard.qml
quickshell/.config/quickshell/modules/bar/: Bar.qml  BluetoothModule.qml  CavaModule.qml  CenterSection.qml  Clock.qml  CpuModule.qml  CyberpunkModule.qml  DiskModule.qml  ExitModule.qml  GpuModule.qml  KeyboardModule.qml  LeftSection.qml  LoadModule.qml  MemoryModule.qml  MprisModule.qml  NetworkModule.qml  PowerPopup.qml  PulseModule.qml  RightSection.qml  Submap.qml  TemperatureModule.qml  Tray.qml  VolumePopup.qml  WallpaperBarModule.qml  WindowTitle.qml  Workspaces.qml
quickshell/.config/quickshell/modules/core/: Drawers.qml  Exclusions.qml  Interactions.qml  Panels.qml
quickshell/.config/quickshell/modules/dashboard/: AppContextMenu.qml  DashAppLauncher.qml  DashCalendar.qml  DashClock.qml  DashLyricsView.qml  DashMainTab.qml  DashMediaMini.qml  DashMediaTab.qml  DashPerfTab.qml  DashResources.qml  DashTabs.qml  DashUser.qml  DashWeatherMini.qml  DashWeatherTab.qml  DashboardConst.js  DashboardContent.qml  DashboardPanel.qml  MediaMiniControls.qml  PlayerSwitcher.qml
quickshell/.config/quickshell/modules/wallpaper/: AngleIndicator.qml  BezierCanvas.qml  BezierPresets.js  NumericField.qml  PlaylistCard.qml  PlaylistPanel.qml  PositionPicker.qml  PresetGrid.qml  PreviewPane.qml  Slider.qml  SteamAuthDialog.qml  TransitionEditor.qml  TypeSelector.qml  WallpaperCard.qml  WallpaperConst.js  WallpaperFilterBar.qml  (+3 more)
quickshell/.config/quickshell/plugins/cyberaudio/: CMakeLists.txt  audiocollector.cpp  audiocollector.hpp  audioprovider.cpp  audioprovider.hpp  beattracker.cpp  beattracker.hpp  cavaprovider.cpp  cavaprovider.hpp  service.cpp  service.hpp  serviceref.cpp  serviceref.hpp
quickshell/.config/quickshell/plugins/cybergraphics/: CMakeLists.txt  sparklineitem.cpp  sparklineitem.hpp
quickshell/.config/quickshell/plugins/cyberwallpaper/: CMakeLists.txt  wallpaperlayer.cpp  wallpaperlayer.hpp
quickshell/.config/quickshell/plugins/plasmafx/: CMakeLists.txt  plasmaflowitem.cpp  plasmaflowitem.hpp  plasmaflowmaterial.cpp  plasmaflowmaterial.hpp  test_plasma.qml
quickshell/.config/quickshell/plugins/plasmafx/shaders/: plasmaflow.frag  plasmaflow.vert
quickshell/.config/quickshell/plugins/wpepreview/: CMakeLists.txt  wpepreviewitem.cpp  wpepreviewitem.hpp
quickshell/.config/quickshell/scripts/: backfill-titles.sh  icon-lookup.py  lyrics-fetch.py  lyrics-server.py  search-wallpapers.py  search-wallpapers.sh  spicy-lyrics.py  wallpaper-picker.sh
spicetify/.config/spicetify/: config-xpui.ini
spicetify/.config/spicetify/Extensions/: lyrics-bridge.js
swaync/.config/swaync/: config.json
wallust/.config/wallust/: wallust.toml
wallust/.config/wallust/templates/: cava_bar_colors  cava_theme  hyprtoolkit  kitty_colors  nvim_palette  swaync_style  waybar_wallust_colors  wofi_style
wofi/.config/wofi/: config
(+5 files in other folders)
